Adding quotes API

--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
                   </li>
                 </ul>
               </div>
+              <div>
+                <hr />
+                <h4>Random Computer Quote</h4>
+                <p id="quote"></p>
+                <p id="author"></p>
+              </div>
             </div>
           </div>
         </div>
